timeclock/test/corpus/extracted_from_hledger.txt
==================
1__a_timeclock_session_is_parsed_as_a_similarly_named_transaction_with_one_virtual_posting_
==================

i 2009/1/1 08:00:00
o 2009/1/1 09:00:00
i 2009/1/2 08:00:00 account name
o 2009/1/2 09:00:00
i 2009/1/3 08:00:00 some:account name  and a description
o 2009/1/3 09:00:00

---

(source_file
  (clock_in
    (datetime))
  (clock_out
    (datetime))
  (clock_in
    (datetime)
    (content))
  (clock_out
    (datetime))
  (clock_in
    (datetime)
    (content))
  (clock_out
    (datetime)))

==================
3__for_a_missing_clock_out__now_is_implied
==================

i 2020/1/1 08:00

---

(source_file
  (clock_in
    (datetime)))

==================
4__for_a_log_not_starting_with_clock_in__print_error
==================

o 2020/1/1 08:00

---

(source_file
  (clock_out
    (datetime)))

==================
5__for_two_consecutive_anonymous_clock_ins__print_error
==================

i 2020/1/1 08:00
i 2020/1/1 09:00

---

(source_file
  (clock_in
    (datetime))
  (clock_in
    (datetime)))

==================
test_8
==================

i 2020-01-30 08:38:35 acct
o 2020-01-30 09:03:35

---

(source_file
  (clock_in
    (datetime)
    (content))
  (clock_out
    (datetime)))

==================
test_10
==================

i 2023-05-01 08:00:00 acct 1  description ; a comment with tag:
o 2023-05-01 09:00:00
i 2023-05-02 08:00:00 acct 2  ; another comment
o 2023-05-02 09:00:00

---

(source_file
  (clock_in
    (datetime)
    (content)
    (comment))
  (clock_out
    (datetime))
  (clock_in
    (datetime)
    (content)
    (comment))
  (clock_out
    (datetime)))

==================
9__support_multiple_sessions_simultaneously_clocked_in_
==================

i 2025-03-10 08:00:00 multi:1  description 1
i 2025-03-10 09:00:00 multi:2  description 2 ; note that these entries are both active
o 2025-03-10 12:00:00 multi:1
o 2025-03-10 15:00:00 multi:2

---

(source_file
  (clock_in
    (datetime)
    (content))
  (clock_in
    (datetime)
    (content)
    (comment))
  (clock_out
    (datetime)
    (content))
  (clock_out
    (datetime)
    (content)))

==================
test_14
==================

i 2025-03-10 08:00:00 multi:1  description 1
i 2025-03-10 09:00:00 multi:2  description 2
i 2025-03-10 10:00:00 multi:3  description 3
o 2025-03-10 11:00:00
o 2025-03-10 12:00:00 multi:1
o 2025-03-10 15:00:00

---

(source_file
  (clock_in
    (datetime)
    (content))
  (clock_in
    (datetime)
    (content))
  (clock_in
    (datetime)
    (content))
  (clock_out
    (datetime))
  (clock_out
    (datetime)
    (content))
  (clock_out
    (datetime)))

==================
11__multiple_active_sessions_can_span_multiple_days_
==================

i 2025-03-11 19:00:00 multi:1
i 2025-03-11 20:00:00 multi:2
o 2025-03-12 08:00:00
o 2025-03-12 09:00:00

---

(source_file
  (clock_in
    (datetime)
    (content))
  (clock_in
    (datetime)
    (content))
  (clock_out
    (datetime))
  (clock_out
    (datetime)))

==================
12__the___timeclock_old_flag_reverts_to_the_old_behavior_
==================

i 2009/1/1 08:00:00
o 2009/1/1 09:00:00 stuff on checkout record  is ignored
i 2009/1/2 08:00:00 account name
o 2009/1/2 09:00:00
i 2009/1/3 08:00:00 some:account name  and a description
o 2009/1/3 09:00:00

---

(source_file
  (clock_in
    (datetime))
  (clock_out
    (datetime)
    (content))
  (clock_in
    (datetime)
    (content))
  (clock_out
    (datetime))
  (clock_in
    (datetime)
    (content))
  (clock_out
    (datetime)))
